if ETCCONF
defaultsdir = $(sysconfdir)/sysconfig
defaults_DATA = etc/sysconfig/zrpc
endif

initdir = $(sysconfdir)/init.d
init_SCRIPTS = etc/init.d/zrpc

firewalldir = $(sysconfdir)/sysconfig/SuSEfirewall2.d/services
firewall_DATA = etc/sysconfig/SuSEfirewall2.d/services/zrpc

MAINTAINERCLEANFILES = Makefile.in
