if ETCCONF
defaultsdir = $(sysconfdir)/default
defaults_DATA = etc/default/zrpc
endif

initdir = $(sysconfdir)/init.d
init_SCRIPTS = etc/init.d/zrpc

ifupdir = $(sysconfdir)/if-up.d
ifup_DATA = etc/network/if-up.d/zrpc

ufwdir = $(sysconfdir)/ufw/applications.d
ufw_DATA = etc/ufw/applications.d/zrpc

MAINTAINERCLEANFILES = Makefile.in

